Colab을 통해 생성됨

--- a/ai_0311.ipynb
+++ b/ai_0311.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZaqqSQOieQCMZvMHg3a/L",
+      "authorship_tag": "ABX9TyMl6YsSGtNRu88WbXJo44iD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "A1epBVYC7-Gl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A1epBVYC7-Gl",
+        "outputId": "f54be5af-1b2b-42ab-afa7-db9b899973d6"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello World\")"
+      ]
     }
   ]
 }
